home-assistant/ingress_traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ha-core-ingress
  namespace: home-assistant
  labels:
    app: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ha.uk.msrpi.com`)
      kind: Rule
      services:
        - name: home-assistant-core
          port: 8123
      middlewares:
        - name: traefik-forward-auth
          namespace: kube-system
  tls:
    certResolver: cloudflare
    domains:
      - main: ha.uk.msrpi.com
